correction responsive page restaurant

--- a/css/styles.css
+++ b/css/styles.css
@@ -377,6 +377,17 @@ html {
   position: relative;
 }
 
+.main {
+  width: 100%;
+  min-width: 320px;
+  display: flex;
+  flex-direction: column;
+}
+.main__wrapper {
+  width: 100%;
+  background: #f7f6f7;
+}
+
 .booking {
   display: flex;
   flex-direction: column;
@@ -590,203 +601,6 @@ html {
   opacity: 1;
 }
 
-.footer {
-  width: 100%;
-  background: #000;
-  color: #fff;
-  padding: 2rem;
-}
-.footer__logo {
-  font-family: "shrikhand";
-  font-style: italic;
-  font-size: 1.1rem;
-  padding: 1rem 1rem 1rem 0;
-}
-.footer__content {
-  display: flex;
-  flex-direction: column;
-  font-size: 0.9rem;
-}
-.footer__icon {
-  width: 10px;
-}
-
-.submit-restaurant {
-  display: flex;
-  padding: 0.5rem 0.5rem 0.5rem 0;
-}
-.submit-restaurant__text {
-  padding-left: 1rem;
-}
-
-.partnership {
-  display: flex;
-  padding: 0.5rem 0.5rem 0.5rem 0;
-}
-.partnership__text {
-  padding-left: 1rem;
-}
-
-.legal {
-  padding: 0.5rem 0.5rem 0.5rem 0;
-}
-
-.contact {
-  text-decoration: none;
-  color: #fff;
-  padding: 0.5rem 0.5rem 1rem 0;
-}
-
-@media only screen and (min-width: 768px) {
-  .container {
-    max-width: 991px;
-  }
-
-  .cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .cards__item {
-    width: 45%;
-    margin: 1rem;
-  }
-
-  .card {
-    width: 100%;
-    max-width: 450px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .container {
-    max-width: 1200px;
-  }
-
-  .check__box-wrapper {
-    display: flex;
-    width: 100%;
-  }
-  .check__box {
-    width: 30%;
-    max-width: 280px;
-  }
-
-  .cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: flex-start;
-  }
-  .cards__item {
-    width: 30%;
-    max-width: 350px;
-    margin: 1rem;
-  }
-
-  .card {
-    width: 100%;
-    margin: 1rem;
-  }
-
-  .restaurant__heading {
-    margin-left: 1rem;
-  }
-
-  .card-menu__dishes-wrapper {
-    flex-direction: row;
-  }
-
-  .footer__content {
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-}
-.spinner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.spinner__item {
-  font-size: 1rem;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: spin 3s linear;
-  visibility: hidden;
-}
-.spinner__item:nth-child(1) {
-  border-top: 5px solid #ff79da;
-}
-.spinner__item:nth-child(2) {
-  border-bottom: 5px solid #9356dc;
-}
-.spinner__text {
-  color: #99e2d0;
-  position: absolute;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-    visibility: visible;
-    opacity: 0.9;
-  }
-  33% {
-    transform: rotate(120deg);
-    opacity: 0.6;
-  }
-  66% {
-    transform: rotate(240deg);
-    opacity: 0.3;
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 0;
-  }
-}
-@keyframes hide {
-  from {
-    transform: translateY(-50%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes slide-up {
-  from {
-    transform: translateY(50%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes appear {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes turn {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(-360deg);
-  }
-}
 .header-restaurant {
   display: flex;
   align-items: center;
@@ -984,6 +798,214 @@ html {
 .add-cart:hover {
   box-shadow: 0px 1px 1px 1px #99e2d0;
   opacity: 0.9;
+}
+
+.footer {
+  width: 100%;
+  background: #000;
+  color: #fff;
+  padding: 2rem;
+}
+.footer__logo {
+  font-family: "shrikhand";
+  font-style: italic;
+  font-size: 1.1rem;
+  padding: 1rem 1rem 1rem 0;
+}
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9rem;
+}
+.footer__icon {
+  width: 10px;
+}
+
+.submit-restaurant {
+  display: flex;
+  padding: 0.5rem 0.5rem 0.5rem 0;
+}
+.submit-restaurant__text {
+  padding-left: 1rem;
+}
+
+.partnership {
+  display: flex;
+  padding: 0.5rem 0.5rem 0.5rem 0;
+}
+.partnership__text {
+  padding-left: 1rem;
+}
+
+.legal {
+  padding: 0.5rem 0.5rem 0.5rem 0;
+}
+
+.contact {
+  text-decoration: none;
+  color: #fff;
+  padding: 0.5rem 0.5rem 1rem 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 991px;
+  }
+
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .cards__item {
+    width: 45%;
+    margin: 1rem;
+  }
+
+  .card {
+    width: 100%;
+    max-width: 450px;
+  }
+
+  .card-menu__dishes-wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .card-menu__dishes {
+    width: 50%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .container {
+    max-width: 1200px;
+  }
+
+  .check__box-wrapper {
+    display: flex;
+    width: 100%;
+  }
+  .check__box {
+    width: 30%;
+    max-width: 280px;
+  }
+
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .cards__item {
+    width: 30%;
+    max-width: 350px;
+    margin: 1rem;
+  }
+
+  .card {
+    width: 100%;
+    margin: 1rem;
+  }
+
+  .restaurant__heading {
+    margin-left: 1rem;
+  }
+
+  .card-menu__dishes-wrapper {
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .footer__content {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.spinner__item {
+  font-size: 1rem;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: spin 3s linear;
+  visibility: hidden;
+}
+.spinner__item:nth-child(1) {
+  border-top: 5px solid #ff79da;
+}
+.spinner__item:nth-child(2) {
+  border-bottom: 5px solid #9356dc;
+}
+.spinner__text {
+  color: #99e2d0;
+  position: absolute;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    visibility: visible;
+    opacity: 0.9;
+  }
+  33% {
+    transform: rotate(120deg);
+    opacity: 0.6;
+  }
+  66% {
+    transform: rotate(240deg);
+    opacity: 0.3;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+@keyframes hide {
+  from {
+    transform: translateY(-50%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-up {
+  from {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes turn {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
