--- a/sass/layouts/_index.scss
+++ b/sass/layouts/_index.scss
@@ -1,7 +1,9 @@
 @forward './container';
 @forward 'header';
+@forward 'main';
 @forward './booking';
 @forward './check';
 @forward './restaurants';
+@forward './restaurant';
 @forward './footer';
 @forward './breakpoints';
