--- a/sass/layouts/_restaurants.scss
+++ b/sass/layouts/_restaurants.scss
@@ -33,6 +33,9 @@
       text-decoration: none;
       @include flex-column;
       color: #000;
+      &:hover{
+        transform: scale(1.1);
+      }
     }
     &__image {
       width: 100%;
