correction input de la class map

--- a/sass/layouts/_booking.scss
+++ b/sass/layouts/_booking.scss
@@ -15,11 +15,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1rem 2.5rem 1rem 0;
+    padding: 1rem;
     font-size: 1rem;
     font-weight: bold;
     &__text {
       padding-left: 1rem;
+      background: $color-bg-dark;
+      border: none;
     }
   }
   
