--- a/css/styles.css
+++ b/css/styles.css
@@ -404,12 +404,14 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 2.5rem 1rem 0;
+  padding: 1rem;
   font-size: 1rem;
   font-weight: bold;
 }
 .map__text {
   padding-left: 1rem;
+  background: #ebebea;
+  border: none;
 }
 
 .search {
