ajout width a map

--- a/sass/layouts/_booking.scss
+++ b/sass/layouts/_booking.scss
@@ -22,7 +22,8 @@
       padding-left: 1rem;
       background: $color-bg-dark;
       border: none;
-      font-weight: bold
+      font-weight: bold;
+      width: 140px;
     }
   }
   
