modification du fichier main.scss - retrait de ' as* ' non necessaire,

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
-@use "./vendors" as *;
-@use "./utils" as *;
-@use './base/base' as *;
-@use './layouts' as *;
-@use './components' as *;
+@use "./vendors" ;
+@use "./utils" ;
+@use './base/base' ;
+@use './layouts' ;
+@use './components' ;
 
 
 
