changement de la propriete du spinner pour le mettre en position fixe et toujours centrée

--- a/css/styles.css
+++ b/css/styles.css
@@ -929,7 +929,7 @@ html {
   }
 }
 .spinner {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
