--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,7 +1,7 @@
 @use '../utils' as *;
 
 .spinner {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
