--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -5,10 +5,22 @@
     font-size: 1.5rem;
     padding: 1rem; 
 }
+
+
+
+@mixin flex-center{
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+}
+
+
 @mixin flex-column {
   display: flex;
   flex-direction: column;
 }
+
+// crée un composant bouton
 
 @mixin button {
   width: 220px;
@@ -21,9 +33,12 @@
   transition: all 200ms;
   cursor: pointer;
 }
+
 @mixin box-shadow{
   box-shadow: 0px 1px 1px 1px $color-new;
 }
+
+//cree le trait de couleur color-new de .card-menu__text;
 
 @mixin underline{
   width: 40px;
@@ -32,11 +47,14 @@
   display: block;
 }
 
+//permet de raccourcir le texte qui deborde du contenu en le remplaçant par des points de suspension;
+
 @mixin text-overflow{
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
 @mixin selected{
   content: '';
   position: absolute;
@@ -46,9 +64,4 @@
   bottom: 0;
   border-radius: 0 15px 15px 0;
   background: #fff;
-}
-@mixin flex-center{
-  display: flex;
-  justify-content: center;  
-  align-items: center;
 }
